# lattice-runtime

./: Cargo.toml  LICENSE  README.md
lattice/: Cargo.toml
lattice-agent/: Cargo.toml
lattice-agent/src/: behavior.rs  blob.rs  events_provider.rs  lib.rs  message_source.rs  sandbox.rs  state.rs  tool_definitions.rs  tool_registry.rs  tools.rs
lattice-agent/src/memory/: mod.rs  sqlite.rs
lattice-agent/src/prompt/: compiler.rs  memory_provider.rs  provider.rs  registry.rs  system_stack.rs  template.rs  types.rs
lattice-agent/tests/: agent_mock.rs  context_e2e.rs
lattice-bus/: Cargo.toml
lattice-bus/src/: assembly.rs  events.rs  handoff_rule.rs  lattice_dir.rs  lib.rs  micro_agent.rs  pipeline.rs  profile.rs  registry.rs  runner.rs  watcher.rs  ws.rs
lattice-core/: Cargo.toml  build.rs
lattice-core/.github/workflows/: release.yml
lattice-core/benches/: benchmarks.rs
lattice-core/examples/: chat_test.rs  minimax_debug.rs  minimax_test.rs  minimax_think.rs  opencode_test.rs  think_test.rs  tool_test.rs
lattice-core/src/: behavior.rs  handoff.rs  invocation.rs  lib.rs  logging.rs  provider.rs  router.rs  security.rs  tokens.rs  types.rs
lattice-core/src/catalog/: loader.rs  mod.rs
lattice-core/src/streaming/: gemini.rs  mod.rs  openai.rs
lattice-core/src/streaming/anthropic/: tests.rs
lattice-core/src/streaming/gemini/: tests.rs
lattice-core/src/transport/: anthropic.rs  chat_completions.rs  dispatcher.rs  gemini.rs  mod.rs
lattice-core/tests/: transport_dispatcher_characterization.rs  transport_integration.rs
lattice-core/tests/e2e/: chat_mock.rs  credential_resolution_characterization.rs  error_classification_characterization.rs  regression_wave1.rs  regression_wave4_5.rs  unknown_model.rs
lattice-plugin/: Cargo.toml
lattice-plugin/src/: bundle.rs  dag_runner.rs  erased.rs  erased_runner.rs  lib.rs  loader.rs  manifest.rs  orchestration.rs  parse_utils.rs  registry.rs  watcher.rs
lattice-python/: Cargo.toml  README.md  pyproject.toml
lattice-python/src/: engine.rs  errors.rs  lib.rs
lattice/benches/: benchmarks.rs
lattice/examples/: chat_test.rs  minimax_debug.rs  minimax_test.rs  minimax_think.rs  opencode_test.rs  think_test.rs  tool_test.rs
lattice/src/: lib.rs
lattice/src/agent/: audit.rs  behavior.rs  bus_event_collector.rs  events_provider.rs  hook.rs  message_source.rs  mod.rs  state.rs
lattice/src/agent/memory/: mod.rs  sqlite.rs
lattice/src/agent/prompt/: compiler.rs  memory_provider.rs  mod.rs  provider.rs  registry.rs  system_stack.rs  types.rs
lattice/src/bus/: assembly.rs  events.rs  handoff_rule.rs  json_output.rs  lattice_dir.rs  micro_agent.rs  mod.rs  pipeline.rs  profile.rs  registry.rs  runner.rs  watcher.rs  ws.rs
lattice/src/core/: errors.rs  invocation.rs  memory.rs  mod.rs  provider.rs  retry.rs  router.rs  security.rs  tokens.rs  types.rs
lattice/src/core/catalog/: data.json  loader.rs  types.rs
lattice/src/core/streaming/: anthropic.rs  tests.rs
lattice/src/core/streaming/openai/: tests.rs
lattice/src/core/transport/: anthropic.rs  chat_completions.rs  dispatcher.rs  gemini.rs  mod.rs
lattice/src/plugin/: bundle.rs  dag_runner.rs  erased.rs  erased_runner.rs  loader.rs  manifest.rs  mod.rs  orchestration.rs  parse_utils.rs  registry.rs  watcher.rs
lattice/src/runtime/: mod.rs
lattice/src/tools/: executor.rs  mod.rs  sandbox.rs  tool_definitions.rs  tool_error.rs  tool_registry.rs
lattice/tests/: agent_mock.rs  context_e2e.rs  e2e.rs  transport_dispatcher_characterization.rs  transport_integration.rs
lattice/tests/e2e/: chat_mock.rs  credential_resolution_characterization.rs  error_classification_characterization.rs  regression_wave1.rs  regression_wave4_5.rs  unknown_model.rs
wiki/: README.md
wiki/api/: python.md
wiki/architecture/: agent-runtime.md  crate-map.md  model-resolution.md  overview.md  pipeline-and-bus.md  security.md
wiki/development/: testing.md
wiki/operations/: release.md
wiki/reference/: plugin-contract.md  streaming.md
