[package]
name = "lattice-agent"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
lattice-core = { path = "../lattice-core" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
indexmap = "2"
tracing = "0.1"
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
blob-store = ["sqlx"]
sqlite-memory = ["rusqlite"]
