[package]
name = "lattice-bus"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "lattice_bus"
crate-type = ["rlib"]

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-agent = { path = "../lattice-agent" }
lattice-plugin = { path = "../lattice-plugin" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
futures = "0.3"
jsonschema = "0.26"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
indexmap = "2"
blake3 = "1"
hex = "0.4"
axum = { version = "0.8", features = ["ws"], optional = true }

[dev-dependencies]
tempfile = "3"
