[package]
name = "lattice-plugin"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-agent = { path = "../lattice-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
tracing = "0.1"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
