[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lattice-core"
version = "0.1.0"
description = "LATTICE: Let Agents Think - Types Impose Control Everywhere"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "LATTICE Contributors" }]

[project.urls]
Repository = "https://github.com/Skyline10124/lattice"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lattice_core"
