[package]
name = "lattice"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "lattice"
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"], optional = true }
blake3 = "1"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
indexmap = "2"
jsonschema = "0.26"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
once_cell = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.11"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time", "local-time"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[features]
axum = ["dep:axum"]
blob-store = ["dep:sqlx"]
sqlite-memory = ["dep:rusqlite"]

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "chat_test"

[[example]]
name = "think_test"

[[example]]
name = "minimax_test"

[[example]]
name = "minimax_think"

[[example]]
name = "opencode_test"

[[example]]
name = "minimax_debug"

[[example]]
name = "tool_test"
